# diplom0-1

./: .gitignore  Makefile  README.md  __main__.py  classes_diplom.mmd  packages_diplom.mmd  plan.md  pyproject.toml
.foam/: settings.json
Mmd/: 5_2.mmd  5_3.mmd  connection.mmd
docs/: architecture.mmd  classes_diplom.mmd  test.excalidraw  test.md  test.puml
mmd/: 5_1.mmd  5_4.mmd  5_5.mmd  Class_Diagram.mmd  State_Machine_Diagram.mmd  classes.mmd  component_diagramm.mmd
src/: _____app.py  app.py
src/application/: __init__.py
src/application/interfaces/: __init__.py  analyst.py  api.py  connection.py  exchange.py  graph_visualizer.py  manager.py
src/application/logic/: __init__.py  edge.py  graph.py  node.py
src/core/: __init__.py
src/core/dto/: __init__.py  asset.py  market_info.py  order.py  route_candidate.py  ticker.py
src/core/entities/: __init__.py  asset.py  coin.py  deal.py  exchange.py  market_info.py  potential.py  ticker.py
src/core/grath/: async_unic_queue.py  container.py  edge.py  node.py  potential.py
src/core/logic/: __init__.py  edge.py  graph.py  node.py  potential.py
src/core/utils/: async_rlock.py
src/infrastructure/base/: __init__.py  analyst.py  connection.py  exchange.py
src/infrastructure/ccxt/: bitget_connection.py
src/infrastructure/mocks/: __init__.py  api.py  connection.py  exchange.py
src/infrastructure/visualizers/: pyvis_visualizer.py
src/visualizer/: graph_visualizer.py
tests/: bit_test.py  ip.py  test.py
tests/core/logic/: test_edge.py  test_graph.py  test_node.py  test_potential.py
(+2 files in other folders)
